--- a/views/admin/category-management.ejs
+++ b/views/admin/category-management.ejs
@@ -118,8 +118,10 @@
                         </tbody>
                     </table>
                 </div>
-                
+               <div style="margin-bottom: 40px;">
                 <%- include('partials/pagination', {currentPage: 1, totalPages: 2}) %>
+
+               </div> 
             </div>
         </div>
     </div>
