--- a/views/admin/coupon-management.ejs
+++ b/views/admin/coupon-management.ejs
@@ -80,9 +80,10 @@
           </table>
         </div>
 
-        <%- include('partials/pagination', {currentPage: 1, totalPages: 3}) %>
-      </div>
-
+        <div style="margin-bottom: 70px;">
+        <%- include('partials/pagination', {currentPage: 1, totalPages: 2}) %>
+        </div>
+        </div>
       <%- include('partials/footer') %>
     </div>
   </div>
