--- a/views/admin/customer-management.ejs
+++ b/views/admin/customer-management.ejs
@@ -141,8 +141,10 @@
     </div>
 </div>
                 
-                <%- include('partials/pagination', {currentPage: 1, totalPages: 10}) %>
-            </div>
+        <div style="margin-bottom: 70px;">
+        <%- include('partials/pagination', {currentPage: 1, totalPages: 2}) %>
+        </div>
+    </div>
             
         </div>
     </div>
