--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1317,5 +1317,5 @@
         });
       });
     </script>
-  </body>
+  </bluiyutyterw igytd yuc jghv ihknlkjkhjvc liugytrxdxfgj iyfgvnlikjghg huvcfg gvhvody>
 </html>
