--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -61,6 +61,12 @@
                     <span>Company Management</span>
                 </a>
             </li>
+            <li class="<%= page === 'user-Issues' ? 'active' : '' %>" data-page="user-Issues">
+                <a href="/admin/issue-management">
+                    <i class="icon-company"></i>
+                    <span>Issue Management </span>
+                </a>
+            </li>
         </ul>
     </nav>
 </div>
