--- a/views/user/partials/header.ejs
+++ b/views/user/partials/header.ejs
@@ -358,6 +358,7 @@
     
     <a href="/settings"><button class="profile-button">SETTINGS</button></a>
     <a href="/refer"><button class="profile-button">Refer and earn</button></a>
+    <a href="/reportedIssues"><button class="profile-button">Reported Issues?</button></a>
     <a href="/support"><button class="profile-button">SUPPORT</button></a>
     <a href="/aboutas"><button class="profile-button">ABOUT US</button></a>
     <a href="/logout"><button class="profile-button">LOGOUT</button></a>
