--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -448,6 +448,7 @@
                 <% }) %>
             </div>
         <% } %>
+        <%- include('partials/userPagination') %>
     </div>
 
     <script>
