--- a/views/admin/company-management.ejs
+++ b/views/admin/company-management.ejs
@@ -288,7 +288,9 @@
             </div>
           </div>
         </div>
+        <div style="margin-bottom: 70px;">
         <%- include('partials/pagination', {currentPage: 1, totalPages: 2}) %>
+        </div>
       </div>
     </div>
     <%- include('partials/footer') %>
