--- a/views/user/AddressBook.ejs
+++ b/views/user/AddressBook.ejs
@@ -360,6 +360,7 @@
           <% } else { %>
             <div class="text-center py-6 text-muted-foreground">No addresses found. Add your first address.</div>
           <% } %>
+          <%- include('partials/userPagination') %>
         </div>
       </div>
     </div>
