--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -458,6 +458,7 @@
                     </div>
                 <% }) %>
             </div>
+            <%- include('partials/userPagination') %>
             <!-- Display total price -->
             <% if (product && product.length > 0) { %>
                 <div class="cart-total">
